--- a/product-manager/package.json
+++ b/product-manager/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.7.2",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
-    "mongoose": "^5.7.11"
+    "mongoose": "^5.7.11",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
