--- a/pick-up-proj/package.json
+++ b/pick-up-proj/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reactivex/rxjs": "^6.5.3",
     "@types/socket.io": "^2.1.4",
+    "autocomplete-js": "^2.7.1",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
